--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ header {
 
 }
 
+
 /* This is the title/navigation bar */
 
 h1 {
@@ -93,7 +94,7 @@ main article {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 14px 40px;
     transition: 0.3s;
   }
   
@@ -111,3 +112,24 @@ main article {
     border: 1px solid #DAF7A6;
     border-top: none;
   }
+
+/* Menu Columns*/
+.column {
+    float: left;
+    width: 33.33%;
+  }
+  
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .row p {
+    font-size: 15px;
+  }
+
+  .row h2 {
+      font-style: italic;
+  }
+  
